syntax = "proto3";
package controller;

option go_package = "proto/hbdb";

service Node {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
    rpc Verify (VerifyRequest) returns (VerifyResponse);
    rpc BatchGet (BatchGetRequest) returns (BatchGetResponse);
    rpc BatchSet (BatchSetRequest) returns (BatchSetResponse);
}

message VerifyRequest {
    string pubkey = 1;
    string signature = 2;    
    string key = 3;
}

message VerifyResponse {
    string pubkey = 1;
    string signature = 2;    
    string blockId = 3;
    string blockHash = 4;
    string txnHash = 5;    
}

enum MessageType {
    Approve = 0;
    Abort = 1;
}

message Block {
    string blkId = 1;
    string hash = 2;
    int64 size = 3;
    repeated SetRequest txs = 4;
}

message GetRequest {
    string pubkey = 1;
    string signature = 2;
    string key = 3;    
}

message GetResponse {
    string pubkey = 1;
    string signature = 2;
    string value = 3;
    int64 version = 4;
}

message BatchGetRequest {    
    repeated GetRequest requests = 1;
}

message BatchGetResponse {
    repeated GetResponse responses = 1;
}

message SetRequest {
    string pubkey = 1;
    string signature = 2;
    string key = 3;
    string value = 4;
    int64 version = 5;
    string txId = 6;
    string hash = 7;
}

message SetResponse {
    string pubkey = 1;
    string signature = 2;
    string txid = 3;
}

message BatchSetRequest {    
    repeated SetRequest requests = 1;
}

message BatchSetResponse {
    repeated SetResponse responses = 1;
}